name:                big-engine
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psandahl/big-engine#readme
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2017 Patrik Sandahl
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

test-suite big-engine-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       VertexTests
  build-depends:       base >= 4.7 && < 5
                     , big-engine
                     , HUnit
                     , linear
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , QuickCheck
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Big
                       Graphics.Big.Mesh.Vert_P
                       Graphics.Big.Mesh.Vert_P_C
  other-modules:       Graphics.Big.Callback
                       Graphics.Big.Configuration
                       Graphics.Big.Display
                       Graphics.Big.GLResources
                       Graphics.Big.Mesh
                       Graphics.Big.Mesh.BufferHelper
                       Graphics.Big.Program
                       Graphics.Big.Render
                       Graphics.Big.Types
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , GLFW-b
                     , linear
                     , mtl
                     , OpenGLRaw
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/psandahl/big-engine
