name:                big-engine
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psandahl/big-engine#readme
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2017 Patrik Sandahl
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

test-suite big-engine-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       MathTests
                       PickIdTests
                       FontParserTests
                       UtilTests
                       VertexTests
  build-depends:       base >= 4.7 && < 5
                     , big-engine
                     , bytestring
                     , HUnit
                     , HUnit-approx
                     , linear
                     , megaparsec
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , QuickCheck
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

library
  hs-source-dirs:      src
  exposed-modules:     BigE.Attribute
                       BigE.Attribute.Vert_P
                       BigE.Attribute.Vert_P_C
                       BigE.Attribute.Vert_P_Tx
                       BigE.Attribute.Vert_P_N_Tx
                       BigE.TextRenderer
                       BigE.TextRenderer.Font
                       BigE.TextRenderer.Text
                       BigE.TextRenderer.Types
                       BigE.TextRenderer.Parser
                       BigE.Math
                       BigE.Mesh
                       BigE.MousePicker
                       BigE.Runtime
                       BigE.Program
                       BigE.Texture
                       BigE.Types
                       BigE.Util
  other-modules:       BigE.Internal.GLResources
                       BigE.Runtime.Configuration
                       BigE.Runtime.Callback
                       BigE.Runtime.Display
                       BigE.Runtime.Render
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , filepath
                     , GLFW-b
                     , JuicyPixels
                     , linear
                     , megaparsec
                     , mtl
                     , OpenGLRaw
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

source-repository head
  type:     git
  location: https://github.com/psandahl/big-engine
